--- a/notes/todo.txt
+++ b/notes/todo.txt
@@ -1,12 +1,20 @@
 TODO:
-  - Add constraint functionality ()
-  - Add goal functionality (X) 
+  - Make toolbox (X)
+  - Fix for loops (X)
+  - Clone cleanup (X)
+  - Theory sections on HTN & HDDL ()
+  - Describe approach for depth first ()
+  - Parse partial order problems (X)
 
 
-  6 ways of combining
-  4 overlapping values
-  1 2 | 3 4
-  1 3 | 2 4
-  1 4 | 2 3
+  Potentielle retninger:
+  - Iterative Deepening
+  - Bidirectional Search
+  - Back Tracking 
 
-  and reversed
+
+
+
+  | --------------------------------------------------- | <- Fra init 
+
+                |-------------| <- Fra Goal
